# MDStudio

./: .gitignore  README.md
release/: DigitalRune.Windows.TextEditor.xml  readme.txt
release/Examples/: hello_world_-_sega_mega_drive.s  hello_world_with_scroll_on_sega_mega_drive_-_by_bigevilcorp.s
src/: MDStudio.sln
src/DGenInterface/: AssemblyInfo.cpp  DGenInterface.cpp  DGenInterface.h  DGenInterface.vcxproj  ReadMe.txt  Stdafx.cpp
src/DGenLib/: BUGS  DGenLib.vcxproj  DGenLib.vcxproj.filters  autogen.sh  debug.cpp  decode.c  dgen.cpp  dgen.h  fm.c  fm.h  joystick.cpp  main.cpp  md.cpp  md.h  mdfr.cpp  mem.cpp  memcpy.h  old_main.cpp  ras-drawplane.h  ras.cpp  rc-vars.h  rc.cpp  romload.c  sample.dgenrc  save.cpp  sdl_pad.cpp  sdl_pad.h  system.c  system.h  vdp.cpp
src/DGenLib/musa/: Makefile.am  m68k.h  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kdasm.c  m68kops.c  m68kops.h
src/DGenLib/star/: Makefile.am  cpudebug.c  cpudebug.h  star.c  starcpu.h  stardoc.txt
src/MDStudio/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  App.config  BreakpointView.Designer.cs  BreakpointView.cs  BuildLog.Designer.cs  BuildLog.cs  BuildLog.resx  CRamViewer.Designer.cs  CRamViewer.cs  Config.cs  ConfigForm.Designer.cs  ConfigForm.cs  DGenThread.cs  DebugSource.cs  Endian.cs  FileView.Designer.cs  FileView.cs  GoToForm.Designer.cs  GoToForm.cs  MDStudio.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.cs.bak  MainForm.resx  MemoryView.Designer.cs  MemoryView.cs  ProfilerView.Designer.cs  ProfilerView.cs  Program.cs  Project.cs  RegisterView.Designer.cs  RegisterView.cs  RegisterView.resx  SDL_Keycode.cs  SearchForm.Designer.cs  SearchForm.cs  SymbolView.Designer.cs  SymbolView.cs  (+13 more)
src/TiTAN-dev/: TiTAN-dev.cpp  TiTAN-dev.h  TiTAN-dev.vcxproj  (+1 more)
(+30 files in other folders)
